--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
     <center>
         <h1>Daftar Planet</h1>
     </center>
+    <input id="input-filter" type="text" placeholder="filter">
+    <table id="table">
+        <tr>
+            <th>name</th>
+            <th>created</th>
+            <th>diameter</th>
+            <th>climate</th>
+            <th>population</th>
+        </tr>
+
+        
+    </table>
+    <script src="./main.js"></script>
 </body>
 </html>
