--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
         <h1>Daftar Planet</h1>
     </center>
     <input id="input-filter" type="text" placeholder="filter">
+    <h4 id="status"></h4>
     <table id="table">
-        <tr>
-            <th>name</th>
-            <th>created</th>
-            <th>diameter</th>
-            <th>climate</th>
-            <th>population</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>name</th>
+                <th>created</th>
+                <th>diameter</th>
+                <th>climate</th>
+                <th>population</th>
+            </tr>
+        </thead>
+        <tbody>
 
-        
+        </tbody>
     </table>
     <script src="./main.js"></script>
 </body>
