--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Daftar Planet</h1>
     </center>
     <input id="input-filter" type="text" placeholder="filter">
-    <h4 id="status"></h4>
+    <h4>Status: <span id="status"></span></h4>
     <table id="table">
         <thead>
             <tr>
